# ectool

./: .gitmodules  CMakeLists.txt  README.md
include/: common.h  darwin_shim.h  host_command.h
src/: CMakeLists.txt  comm-darwin.cc  comm-host.cc  ectool.cc  ectool_i2c.cc  ectool_keyscan.cc
